Issue #3209: Adding color schemes to Basis and adding a few new color options to handle some cases where colors were too close together.

--- a/core/themes/basis/css/skin.css
+++ b/core/themes/basis/css/skin.css
@@ -404,12 +404,13 @@ fieldset .fieldset-legend {
  * Footer styles
  */
 .l-footer {
-  border-top: 0.25rem solid #bbbbbb;
+  border-top: 0.25rem solid #bbbbbc;
   /* If footer text wraps, remove line-height & add padding styles to blocks */
   line-height: 3;
   padding: 0.5em 0 1em;
   margin: 5em 0 0;
   background-color: #fffeff;
+  color: #000100;
 }
 
 /**
@@ -442,7 +443,7 @@ fieldset .fieldset-legend {
 }
 
 .breadcrumb a {
-  color: #000000;
+  color: #010000;
 }
 
 /* Arrow color */
@@ -895,7 +896,7 @@ ul.primary li.active a,
 .responsive-tabs-mobile .expand-dropdown-tabs-control:before,
 .responsive-tabs-mobile .expand-dropdown-tabs-label {
   border-color: #586172; /* Should be color of bg behind tabs */
-  color: #757575;
+  color: #010000;
   background-color: #dee2ea;
 }
 
@@ -904,7 +905,7 @@ ul.primary li.active a.active,
 ul.primary li.active a:active,
 ul.primary li.active a:visited,
 .responsive-tabs-mobile .expand-dropdown-tabs-label {
-  color: #000000;
+  color: #000001;
   background-color: #ffffff;
   font-weight: bold;
 }
@@ -917,7 +918,7 @@ ul.primary li a:focus,
 .responsive-tabs-mobile .expand-dropdown-tabs-control:focus:before,
 .responsive-tabs-mobile .expand-dropdown-tabs-control.js-active:before,
 .expand-dropdown-tabs-control.js-active {
-  color: #000000;
+  color: #000001;
   background: #d5d5d5;
 }
 
